find . -executable -type f >> .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,85 @@
 10-8-2-pow
 9-24-6
 9-24-6-lire-TOUPPER-ecrire-fichier
+./9-08-dé-sans-max
+./9-09-operations-genie
+./9-11-boucle-i++while
+./9-24-7-lire-fichier-ECRIRE-FICHIER
+./9-11-sphere
+./10-6-1-quatre-operations
+./9-09-127+1
+./9-24-2-ecrire-nommer-fichier
+./9-07-vide
+./9-25-4-entier-vs-reel-perf
+./11-3-2-transcodages
+./9-13-1-numsecsoc
+./9-07-HelloWorld
+./9-24-5-lire-ecrire-fichiers
+./9-11-1-majuscules
+./9-24-3-ecrire-nom-fichier-sans-extension
+./9-09-signed_int
+./11-2-5-transcodage-de-bases
+./9-25-6-lettre-ascii
+./9-11-4-entier-ascii-entier
+./9-24-1-ecrire-fichier
+./9-29-programme-cf-trois-entiers
+./11-2-2-notes
+./10-2-4-test-format-variable
+./11-2-4-puissance
+./10-9-2-majuscule-minuscule-ctype
+./9-08-remplacement-scanf
+./9-24-6
+./9-29-3-controle-scanf
+./9-09-operations
+./9-15-3-conversion-valeur
+./9-25-2-circonf-constPI
+./10-8-3-pow-scanf-printf
+./9-08-remplacement
+./9-13-2-chiffre-plus-grand
+./9-09-operations-ensemble-genie
+./10-8-2-pow
+./10-13-1-saisie-vcard-long-int
+./9-23-2-acces-fichier-traitement
+./10-2-3-adresse-variable
+./9-10-division-int-vs-float
+./9-10-arrondi-analytique
+./10-9-3-caractère-réel
+./9-15-2-char-avec-sans-signe
+./10-6-3-traitements-reel
+./10-13-1-alphabet
+./9-24-6-lire-TOUPPER-ecrire-fichier
+./9-09-maxint
+./9-10-operations-resultat
+./9-08-remplacement-scanf-un-seul
+./9-15-5-saisi-nom-tout-majuscules
+./9-09-operations-ensemble
+./9-10-helloworld
+./9-23-1-accès-fichier
+./9-15-4-saisir-nom-avec-majuscule
+./10-15-3-pow-exposant-variable
+./9-11-3-entier-vers-ascii-ascii-deux-variables
+./9-10-2.3
+./11-2-3-boucle-à-la-main
+./9-29-2-programme-cf-trois-entiers-variable-VRAI-FAUX
+./.git/hooks/prepare-commit-msg.sample
+./.git/hooks/pre-commit.sample
+./.git/hooks/update.sample
+./.git/hooks/applypatch-msg.sample
+./.git/hooks/pre-applypatch.sample
+./.git/hooks/pre-push.sample
+./.git/hooks/pre-rebase.sample
+./.git/hooks/post-update.sample
+./.git/hooks/commit-msg.sample
+./9-11-2-entier-vers-ascii
+./11-3-1-printf-ascii
+./9-10-operations-sans-variable
+./9-15-1-print-lettre-comme-chiffre
+./9-25-3-entier-vs-reel
+./10-2-1-circonf-define
+./10-15-1-pow-affecté
+./9-09-hexadécimal
+./9-25-1-circonf-definePI
+./10-2-2-circonf-const
+./10-8-1-emprunt
+./9-25-5-maj-min
+./11-2-1-horloge-calendrier
