--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
 10-8-2-pow
 9-24-6
 9-24-6-lire-TOUPPER-ecrire-fichier
-./9-08-dé-sans-max
-./9-09-operations-genie
-./9-11-boucle-i++while
-./9-24-7-lire-fichier-ECRIRE-FICHIER
-./9-11-sphere
-./10-6-1-quatre-operations
-./9-09-127+1
-./9-24-2-ecrire-nommer-fichier
-./9-07-vide
-./9-25-4-entier-vs-reel-perf
-./11-3-2-transcodages
-./9-13-1-numsecsoc
-./9-07-HelloWorld
+9-08-dé-sans-max
+9-09-operations-genie
+9-11-boucle-i++while
+9-24-7-lire-fichier-ECRIRE-FICHIER
+9-11-sphere
+10-6-1-quatre-operations
+9-09-127+1
+9-24-2-ecrire-nommer-fichier
+9-07-vide
+9-25-4-entier-vs-reel-perf
+11-3-2-transcodages
+9-13-1-numsecsoc
+9-07-HelloWorld
 ./9-24-5-lire-ecrire-fichiers
 ./9-11-1-majuscules
 ./9-24-3-ecrire-nom-fichier-sans-extension
