--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@
 10-8-1-emprunt
 9-25-5-maj-min
 11-2-1-horloge-calendrier
+11-4-1-calculette
+11-4-2-nombre-vers-ASCII
+11-4-3-cf-lettres
+11-4-3-cf-lettres
