--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@
 11-5-echiquier
 11-4-4-calculatrice
 11-10-vcard-avec-note 9-24-8-saisie-vcard
+11-10-vcard-avec-note 11-23-1-arrondi 11-24-1-conversion-nombre 9-09-boucle-i++ 9-24-8-saisie-vcard
