Programme sans '#include <stdio.h>'!

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@
 11-4-4-calculatrice
 11-10-vcard-avec-note 9-24-8-saisie-vcard
 11-10-vcard-avec-note 11-23-1-arrondi 11-24-1-conversion-nombre 9-09-boucle-i++ 9-24-8-saisie-vcard
+12-02-4-diviseurs-de-nombre
